# PII

./: .gitignore  003_脫敏規則表_v3.docx  CLAUDE.md  README.md  audit.py  ckip_recognizer.py  compare_pipelines.py  config.py  conflict_resolver.py  minimal_pipeline.py  pipeline.py  pseudonym.py  recognizers.py  requirements.txt  run_demo.py  run_stt.py  test.pseudonym.py  test_conflict_resolver.py  test_has_keyword_context.py  test_normalizer.py  test_priority_formula.py  test_pseudonym.py  test_speaker_aware.py
pii_masker_v2/: .gitignore  .pre-commit-config.yaml  MIGRATION.md  README.md  pyproject.toml
pii_masker_v2/.github/workflows/: ci.yml
pii_masker_v2/examples/: demo_dialogue.py  demo_single_text.py  demo_stt_batch.py
pii_masker_v2/policy/: defaults.yaml
pii_masker_v2/scripts/: rebuild_golden.py
pii_masker_v2/src/pii_masker/: __init__.py
pii_masker_v2/src/pii_masker/audit/: __init__.py  event.py  schema.py  trace.py
pii_masker_v2/src/pii_masker/audit/sinks/: __init__.py  base.py  csv_sink.py  jsonl_sink.py  null_sink.py
pii_masker_v2/src/pii_masker/cli/: __init__.py  __main__.py  mask_csv.py  mask_text.py  verify.py
pii_masker_v2/src/pii_masker/config/: __init__.py  loader.py
pii_masker_v2/src/pii_masker/detect/: __init__.py  base.py  registry.py
pii_masker_v2/src/pii_masker/detect/address/: __init__.py  detector.py
pii_masker_v2/src/pii_masker/detect/ner/: __init__.py  ckip_adapter.py
pii_masker_v2/src/pii_masker/detect/regex/: __init__.py  amount.py  amount_txn.py  atm_ref.py  base.py  branch.py  campaign.py  cvv.py  dob.py  email.py  expiry.py  keywords.py  loan_ref.py  otp.py  passport.py  pin.py  policy_no.py  staff_id.py  tw_bank_account.py  tw_credit_card.py  tw_id.py  tw_phone.py  txn_ref.py  validators.py  (+1 more)
pii_masker_v2/src/pii_masker/domain/: __init__.py  detection.py  dialogue.py  entity_type.py  errors.py  policy.py  result.py  span.py
pii_masker_v2/src/pii_masker/io/: __init__.py  stt_json_loader.py
pii_masker_v2/src/pii_masker/normalize/: __init__.py  compose.py  fullwidth.py  nfc.py  roc_year.py  stt_filler.py  whitespace.py  zh_numeral.py
pii_masker_v2/src/pii_masker/observability/: __init__.py  logging.py
pii_masker_v2/src/pii_masker/pipeline/: __init__.py  dialogue.py  masker.py
pii_masker_v2/src/pii_masker/resolve/: __init__.py  dedup.py  priority.py  resolver.py
pii_masker_v2/src/pii_masker/rules/: __init__.py  conditional_amount.py  speaker_aware.py
pii_masker_v2/src/pii_masker/tokenize/: __init__.py  replacer.py  tracker.py
pii_masker_v2/src/pii_masker/usability/: __init__.py  tagger.py  tags.py
pii_masker_v2/src/pii_masker/verify/: __init__.py  leak_scanner.py  token_regex.py
pii_masker_v2/tests/: conftest.py
pii_masker_v2/tests/golden/: test_regression.py
pii_masker_v2/tests/golden/expected_v4/: bank_dialogue.json
pii_masker_v2/tests/golden/fixtures/: bank_dialogue.json
pii_masker_v2/tests/integration/: test_cli.py  test_pipeline_full.py  test_stt_loader.py
pii_masker_v2/tests/leak/: test_injected_pii_is_caught.py
pii_masker_v2/tests/unit/audit/: test_event.py  test_sinks.py
pii_masker_v2/tests/unit/config/: test_loader.py
pii_masker_v2/tests/unit/detect/: test_ckip_adapter.py  test_registry.py
pii_masker_v2/tests/unit/domain/: test_detection.py  test_dialogue.py  test_entity_type.py  test_errors.py  test_policy.py  test_result.py  test_span.py
pii_masker_v2/tests/unit/normalize/: test_compose.py  test_fullwidth.py  test_nfc.py  test_roc_year.py  test_stt_filler.py  test_whitespace.py  test_zh_numeral.py
pii_masker_v2/tests/unit/resolve/: test_dedup.py  test_priority.py  test_resolver.py
pii_masker_v2/tests/unit/rules/: test_conditional_amount.py  test_speaker_aware.py
pii_masker_v2/tests/unit/tokenize/: test_replacer.py  test_tracker.py
pii_masker_v2/tests/unit/usability/: test_tagger.py
pii_masker_v2/tests/unit/verify/: test_leak_scanner.py  test_token_regex.py
(+38 files in other folders)
