[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pii-masker"
version = "2.0.0"
description = "Taiwanese-bank voice/STT PII masking pipeline (v2 rewrite) — hexagonal, immutable, fail-closed."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "PII masking team" },
]
keywords = ["pii", "masking", "presidio", "ckip", "zh-tw", "banking", "stt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Security",
    "License :: Other/Proprietary License",
]

dependencies = [
    "PyYAML>=6.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
ckip = [
    "ckip-transformers>=0.3.4",
    "torch>=2.0",
]
presidio = [
    "presidio-analyzer>=2.2",
    "spacy>=3.7",
]
observability = [
    "structlog>=24.1",
]
excel = [
    "openpyxl>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "bandit>=1.7",
    "types-PyYAML>=6.0",
]

[project.scripts]
pii-masker = "pii_masker.cli.__main__:main"

[project.urls]
Documentation = "file:///Users/Liang/Documents/PII/pii_masker_v2/README.md"
Source = "file:///Users/Liang/Documents/PII/pii_masker_v2"

[tool.hatch.build.targets.wheel]
packages = ["src/pii_masker"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/policy",
    "/tests",
    "/examples",
    "/README.md",
    "/MIGRATION.md",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
markers = [
    "unit: fast pure-function unit tests",
    "integration: end-to-end pipeline tests",
    "golden: regression tests against root pipeline.py oracle",
    "property: hypothesis property-based tests",
    "leak: injected-PII leak detection tests",
    "perf: performance budget tests",
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "requires_ckip: tests that need the CKIP model loaded",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::UserWarning:presidio_analyzer.*",
]

[tool.coverage.run]
branch = true
source = ["src/pii_masker"]
omit = [
    "*/cli/*",
    "*/observability/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "ckip_transformers.*",
    "presidio_analyzer.*",
    "spacy.*",
    "torch.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
